Fix review, backups, product image and swatch I should have done this friday night but it seems like i did not. I had to get outta there pretty quickly, so I am doing it now. Unfortunately, the code changes aren't very fresh in my head, but I do know what progress was made, mainly on the review section. the price no longer removes itself from the product table. now all these values are loading in there and staying, but given this, the product name doesn't fit overly well, so i changed it to a linked image of the product. After doing this, the "Color - peach" tag below the image loked kinda weird, and threw off the spacing   vertically. I thought it might be cool to have the image border be the   color option. I got this in there, and I think i was right, very cool.   I'm sure there are some other small fixes in here, but that's pretty   much the main points. And getting the database synced was a big priority   of this changeset. I've synced that and it looks like everything went   exactly as planned. I'll sync to the server and make another note.
Former-commit-id: 950e93a0921a7758ddcf3c777a40bf2e51d626e8

--- a/skin/frontend/default/rofcustom/css/cart-checkout.css
+++ b/skin/frontend/default/rofcustom/css/cart-checkout.css
@@ -780,10 +780,23 @@ img, button, input {
 
         /* One Page Checkout Review Section
         ******************************************************/
+        .opc-wrapper-opc #checkout-review-table .a-right,
+        .opc-wrapper-opc #checkout-review-table .a-center,
+        .opc-wrapper-opc #checkout-review-table .a-left {
+            vertical-align: middle !important;
+        }
+
         .opc-wrapper-opc .product-name {
             text-indent: -10px;
             padding-left: 15px !important;
         }
+
+        .cart-cartbox-table-product-detail-img-wrap {
+            margin-bottom: 2px !important;
+            background-color: transparent;
+        }
+
+
         .opc-wrapper-opc .item-options {
             padding-left: 10px;
         }
@@ -815,6 +828,18 @@ img, button, input {
             margin-left: 10px;
             padding-top: 10px;
         }
+
+            /* Product Color Swatch Values (For Use as Border Color around Product Image) **************
+            ********************************************************************************************/
+            .cart-cartbox-table-product-detail-img-wrap.peach {
+                background-color: #EDDFCC;
+            }
+            .cart-cartbox-table-product-detail-img-wrap.pink {
+                background-color: #DD95BC;
+            }
+            .cart-cartbox-table-product-detail-img-wrap.blue {
+                background-color: #56B2DD;
+            }
 
         /* Fix Misc Floats and Element Labels
         ******************************************************/
